fixed avatar overflow glitch

--- a/src/common/components/avatar/avatar.styl
+++ b/src/common/components/avatar/avatar.styl
@@ -7,6 +7,8 @@
   overflow hidden
   min-width 4rem
   min-height @min-width
+  position relative
+  z-index 1
 
 .medium
   wh(6rem)
