--- a/src/common/components/header/header.styl
+++ b/src/common/components/header/header.styl
@@ -107,8 +107,5 @@
   .avatar
     center()
     background white
-    height 100%
-    width 6rem
-
-    > div
-      wh(4rem)
+    height 6rem
+    width @height
